log
Fri, May 16, 2025  7:23:50 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Fri, May 16, 2025  7:30:25 PM: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:15: error: unused variable 'l' [-Werror=unused-variable]
     int i,j,k,l;
               ^
cc1.exe: all warnings being treated as errors
f866f77
Fri, May 16, 2025  7:30:39 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
40c3da4
Fri, May 16, 2025  7:31:27 PM: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
4769aa2
Fri, May 16, 2025  7:36:10 PM: 
 sudoku.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
60fd38b
Fri, May 16, 2025  7:38:41 PM: 
 sudoku.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:53:14: error: 'k' undeclared (first use in this function)
              k=n->sudo[i][j];
              ^
sudoku.c:53:14: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:49:9: error: variable 'box' set but not used [-Werror=unused-but-set-variable]
     int box[9][10]={0};
         ^~~
sudoku.c:48:9: error: variable 'columnas' set but not used [-Werror=unused-but-set-variable]
     int columnas[9][10]={0};
         ^~~~~~~~
sudoku.c:47:9: error: variable 'filas' set but not used [-Werror=unused-but-set-variable]
     int filas[9][10]={0};
         ^~~~~
cc1.exe: all warnings being treated as errors
a19db26
